# aircraft-design

./: .gitignore  :00.bl  G  PLOT  README.md  __init__.py  aircraft_design.py  config.cfg  ex.py  ex2.py  exemple.ipynb  flightfunctions.py  inputs.py  inputs2.py  mission.py  mkdocs.yml  mtow.py  pyproject.toml  requirements.txt  setup.py  teste.py  teste2.py
aircraft_design/: __init__.py
aircraft_design/classes/: __init__.py  aircraft.py  airfoil.py  errors.py  module.pyx  runner.py  wing.py  xfoil_controler.py
avlCases/aircraft/: aircraft.case
avlCases/aircraft_cruz/: aircraft_cruz.avl
avlCases/aircraft_deco/: aircraft_deco.avl  aircraft_deco.case
data/: KC-135 Winglet_CL_CD_42M_RE.txt  LOCKHEED-GEORGIA_CL_CD_42M_RE.txt  WHITCOMB INTEGRAL_CL_CD_9M_RE.txt
deprecated/: ex.py  ex2.py  exemple.ipynb  teste.py
deprecated/avlCases/aircraft/: aircraft.avl
deprecated/avlCases/aircraft_cruz/: aircraft_cruz.case
deprecated/data/: KC-135 Winglet_CL_CD_9M_RE.txt  LOCKHEED-GEORGIA_CL_CD_9M_RE.txt  SC(2)-0614_CL_CD_42M_RE.txt  SC(2)-0614_CL_CD_9M_RE.txt  SC(2)-0714_CL_CD_42M_RE.txt  SC(2)-0714_CL_CD_9M_RE.txt  WHITCOMB INTEGRAL_CL_CD_42M_RE.txt
deprecated/src/: Aircraft_Classes.py  pre_selection_core.py  pre_selection_geometry.py  pre_selection_plotter.py
docs/: index.md
src/: airfoil.py  pre_selection.py  pre_selection_geometry.py  pre_selection_metric.py  pre_selection_plotter.py  raymer_tables.py
tests/: test_airfoil.py  test_create_elements.py  test_dimentions.py  test_pre_selection.py  test_run_multicase.py
