[tool.poetry]
name = "aircraft-design"
version = "0.1.0"
description = ""
authors = ["irissonnlima <irisson2203@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
scipy = "^1.9.1"
numpy = "^1.23.3"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
