[tool.poetry]
name = "aircraft-design"
version = "0.1.0"
description = ""
authors = ["irissonnlima <irisson2203@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
avlwrapper = "^0.3.0"
jupyter = "^1.0.0"
pandas = "^1.5.0"


[tool.poetry.dev-dependencies]
blue = "^0.9.1"
pytest = "^7.1.3"
ipykernel = "^6.16.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
